package wr1ttenyu.f1nal.study.designpattern.pattern23.builder;

import lombok.Getter;
import lombok.Setter;
import lombok.ToString;

@Getter
@Setter
@ToString
public class House {

    private String basic;

    private String wall;

    private String roof;

}
